--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,19 @@ nav a {
   color: #666;
   font-style: italic;
 }
+
+header {
+  margin-top: 30px;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 2.5rem;
+  font-weight: normal;
+}
+
+header p {
+  margin-top: 5px;
+  font-size: 1rem;
+  letter-spacing: 0.5px;
+}
