--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,11 @@ video {
   margin-right: auto;
   border-radius: 8px;
 }
+a h1 {
+  text-decoration: none;
+  color: inherit;
+}
+
+a h1:visited {
+  color: inherit;
+}
