--- a/styles.css
+++ b/styles.css
@@ -118,11 +118,12 @@ video {
   margin-right: auto;
   border-radius: 8px;
 }
-a h1 {
+h1 a {
   text-decoration: none;
   color: inherit;
 }
 
-a h1:visited {
+h1 a:visited {
   color: inherit;
 }
+
