--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ nav a {
   display: inline-block;
   font-size: 0.9rem;
   text-transform: lowercase;
-  font-family: monospace;
+  font-family: arial;
 }
 
 .photo-placeholder {
